# sboui

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  License  Makefile  Makefile.am  README.md  TODO  configure  configure.ac  sboui.conf  sboui.desktop.in  temp.Makefile
cmake/Modules/: FindConfig++.cmake  FindLibconfig++.cmake
config/: colors_dark.cfg  colors_light.cfg  sboui.cfg
etc/: blacklist  colors.commander  colors.cyan  colors.dark  colors.green  colors.light  colors.mc-like  colors.red  colors_dark.cfg  colors_light.cfg  ignore_versions  package_blacklist  sboui-backend.conf  sboui-sync.cron.in  sboui-sync.py.in  sboui.cfg  sboui.conf
include/: AbstractListBox.h  Blacklist.h  BuildActionBox.h  BuildListBox.h  BuildListItem.h  BuildOptionsBox.h  BuildOrderBox.h  CLOParser.h  CategoryList.h  CategoryListBox.h  CategoryListItem.h  Color.h  ColorTheme.h  ComboBox.h  ComboBoxList.h  CursesWidget.h  DefaultOptionsBox.h  DirListBox.h  DirListing.h  FilterBox.h  HelpItem.h  HelpWindow.h  IgnoreVersions.h  InputBox.h  InputItem.h  InstallBox.h  InstallOrderBox.h  InvReqBox.h  KeyHelpWindow.h  Label.h  ListBox.h  ListItem.h  MainWindow.h  Menubar.h  MenubarList.h  MenubarListItem.h  MessageBox.h  MouseEvent.h  MouseHelpWindow.h  OptionsWindow.h  (+19 more)
man/: sboui-backend.8  sboui-backend.conf.5  sboui-update-notifier.1  sboui.8  sboui.cfg.5  sboui.conf.5
src/: AbstractListBox.cpp  Blacklist.cpp  BuildActionBox.cpp  BuildListBox.cpp  BuildListItem.cpp  BuildOptionsBox.cpp  BuildOrderBox.cpp  CLOParser.cpp  CategoryList.cpp  CategoryListBox.cpp  CategoryListItem.cpp  Color.cpp  ColorTheme.cpp  ComboBox.cpp  ComboBoxList.cpp  CursesWidget.cpp  DefaultOptionsBox.cpp  DirListBox.cpp  DirListing.cpp  FilterBox.cpp  HelpItem.cpp  HelpWindow.cpp  IgnoreVersions.cpp  InputBox.cpp  InputItem.cpp  InstallBox.cpp  InvReqBox.cpp  KeyHelpWindow.cpp  Label.cpp  ListBox.cpp  ListItem.cpp  MainWindow.cpp  Menubar.cpp  MenubarList.cpp  MenubarListItem.cpp  MessageBox.cpp  MouseEvent.cpp  MouseHelpWindow.cpp  OptionsWindow.cpp  PackageInfoBox.cpp  (+23 more)
src/cpp/: AbstractListBox.cpp  BuildActionBox.cpp  BuildListBox.cpp  BuildListItem.cpp  BuildOrderBox.cpp  CLOParser.cpp  CategoryListBox.cpp  Color.cpp  ComboBox.cpp  ComboBoxList.cpp  CursesWidget.cpp  DirListBox.cpp  DirListing.cpp  FilterBox.cpp  HelpItem.cpp  HelpWindow.cpp  InputBox.cpp  InputItem.cpp  InstallBox.cpp  InstallOrderBox.cpp  InvReqBox.cpp  Label.cpp  ListBox.cpp  ListItem.cpp  MainWindow.cpp  MessageBox.cpp  OptionsWindow.cpp  ScrollBox.cpp  SearchBox.cpp  SelectionBox.cpp  ShellReader.cpp  TagList.cpp  TextInput.cpp  ToggleInput.cpp  backend.cpp  color_settings.cpp  filters.cpp  requirements.cpp  sboui.cpp  settings.cpp  (+3 more)
src/shell/: sboutil.sh
