bin_PROGRAMS = sboui

sboui_SOURCES = src/cpp/Color.cpp src/cpp/settings.cpp src/cpp/string_util.cpp src/cpp/signals.cpp src/cpp/ListItem.cpp src/cpp/CategoryListItem.cpp src/cpp/BuildListItem.cpp src/cpp/sorting.cpp src/cpp/DirListing.cpp src/cpp/backend.cpp src/cpp/requirements.cpp src/cpp/CursesWidget.cpp src/cpp/AbstractListBox.cpp src/cpp/ListBox.cpp src/cpp/CategoryListBox.cpp src/cpp/BuildListBox.cpp src/cpp/SelectionBox.cpp src/cpp/FilterBox.cpp src/cpp/BuildActionBox.cpp src/cpp/DirListBox.cpp src/cpp/TagList.cpp src/cpp/BuildOrderBox.cpp src/cpp/InvReqBox.cpp src/cpp/InstallBox.cpp src/cpp/ScrollBox.cpp src/cpp/HelpItem.cpp src/cpp/HelpWindow.cpp src/cpp/InputItem.cpp src/cpp/TextInput.cpp src/cpp/ToggleInput.cpp src/cpp/Label.cpp src/cpp/ComboBoxList.cpp src/cpp/ComboBox.cpp src/cpp/InputBox.cpp src/cpp/SearchBox.cpp src/cpp/OptionsWindow.cpp src/cpp/MessageBox.cpp src/cpp/filters.cpp src/cpp/MainWindow.cpp src/cpp/sboui.cpp 

sboui_CPPFLAGS = -g -Wall -Iinclude
sboui_LDFLAGS = -lncurses -lconfig++
